; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-run-command.c_test_failed.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-run-command.c_test_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.testsuite = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"FAILED TO START: '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.strbuf*, i8*, i8*)* @test_failed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_failed(%struct.strbuf* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.testsuite*, align 8
  %8 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.testsuite*
  store %struct.testsuite* %10, %struct.testsuite** %7, align 8
  %11 = load i8*, i8** %6, align 8
  store i8* %11, i8** %8, align 8
  %12 = load %struct.testsuite*, %struct.testsuite** %7, align 8
  %13 = getelementptr inbounds %struct.testsuite, %struct.testsuite* %12, i32 0, i32 0
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @string_list_append(i32* %13, i8* %14)
  %16 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @strbuf_addf(%struct.strbuf* %16, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %17)
  ret i32 0
}

declare dso_local i32 @string_list_append(i32*, i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
